# command-unquoted

./: Cargo.toml  README.md
src/: lib.rs
